# wadup2

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  NUMPY_PROGRESS.md  NUMPY_WASI.md  PANDAS_WASI.md  PYDANTIC_WASI.md  README.md  SYSTEM_DESIGN.md  WEB_APP_DESIGN.md  docker-compose.yml  wadup2.sln
crates/wadup-bindings/: Cargo.toml
crates/wadup-cli/: Cargo.toml
crates/wadup-cli/src/: main.rs
crates/wadup-cli/tests/: integration_tests.rs
crates/wadup-core/: Cargo.toml
crates/wadup-core/src/: bindings_context.rs  bindings_types.rs  content.rs  lib.rs  memory_fs.rs  metadata.rs  precompile.rs  processor.rs  shared_buffer.rs  test_output.rs  test_runner.rs  wasi_impl.rs  wasm.rs
crates/wadup-guest/: Cargo.toml
csharp-wadup-guest/: README.md  SubContent.cs  Table.cs  Types.cs
docker/: build-images.sh
docker/go/: Dockerfile  build.sh
docker/python/: Dockerfile  build.sh  build_module.py  download-and-build-deps.sh
docker/rust/: Dockerfile  build.sh
docker/test/: Dockerfile
docs/: PYDANTIC_NOTES.md  PYDANTIC_WASM_INVESTIGATION.md
examples/byte-counter/: Cargo.toml
examples/csharp-json-analyzer/: CSharpJsonAnalyzer.csproj  JsonAnalyzer.cs  Makefile  Program.cs  README.md
examples/go-sqlite-parser/: Makefile  README.md  go.mod  go.sum  main.go
examples/python-counter/: Makefile  build-python.sh  build.sh  pyproject.toml  python-wasi
examples/python-large-file-test/: pyproject.toml
examples/python-large-file-test/src/python_large_file_test/: __init__.py  large_module.py
examples/python-lxml-test/: Makefile  pyproject.toml
examples/python-module-test/: Makefile  embed_script.sh  pyproject.toml
examples/python-multi-file/: Makefile  pyproject.toml
examples/python-numpy-test/: pyproject.toml
examples/python-pandas-test/: pyproject.toml
extensions/: __init__.py
go-wadup-guest/: ffi.go  go.mod
pyo3_issue/: .gitignore  Cargo.toml  README.md  build-pydantic-test.sh  build.sh  main.c  run.sh  test_pydantic_core.c
pyo3_issue/src/: lib.rs
python-wadup-guest/: README.md
python-wasm-runtime/: README.md
scripts/: build-all.sh  build-examples.sh  build-lxml-wasi.sh  build-numpy-wasi.sh  build-pandas-wasi.sh  build-pydantic-wasi.sh  build-python-module.sh  build-python-project.py  build-python-project.sh  build-python-wasi.sh  clean.sh  config.site-wasm32-wasi  download-deps.sh  run-demo.sh  run-integration-tests.sh
wadup-web/: .gitignore  Dockerfile.build-go  Dockerfile.build-python  Dockerfile.build-rust  Dockerfile.web  README.md  docker-compose.yml
wadup-web/backend/: alembic.ini  pyproject.toml
wadup-web/backend/alembic/: env.py
wadup-web/backend/alembic/versions/: 001_initial.py
wadup-web/backend/app/: __init__.py  config.py  database.py  main.py
wadup-web/backend/app/models/: __init__.py  module.py  sample.py  user.py
wadup-web/backend/app/routers/: __init__.py  auth.py  build.py  files.py  modules.py  samples.py  test.py
wadup-web/backend/app/schemas/: __init__.py  module.py  sample.py  user.py
wadup-web/backend/app/services/: __init__.py  build_service.py  module_service.py  test_service.py
wadup-web/backend/app/templates/go/: go.mod.j2  main.go.j2
wadup-web/backend/app/templates/python/: __init__.py.j2  pyproject.toml.j2
wadup-web/backend/app/templates/rust/: Cargo.toml.j2  lib.rs.j2
(+166 files in other folders)
