[workspace]
members = [
    "crates/wadup-core",
    "crates/wadup-bindings",
    "crates/wadup-guest",
    "crates/wadup-cli",
]
exclude = [
    "examples/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
