[package]
name = "pyoncelock_demo"
version = "0.1.0"
edition = "2021"

# This makes the package independent of the parent workspace
[workspace]

[lib]
crate-type = ["staticlib"]
name = "pyoncelock_demo"

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
