[package]
name = "wadup-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wadup"
path = "src/main.rs"

[dependencies]
wadup-core = { path = "../wadup-core" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
rusqlite = "0.32"
tempfile = "3.8"
