[package]
name = "wadup-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wadup-bindings = { path = "../wadup-bindings" }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasmtime = "26"
wasmtime-wasi = "26"
rusqlite = { version = "0.32", features = ["bundled"] }
crossbeam = "0.8"
crossbeam-deque = "0.8"
