[package]
name = "wadup-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasmtime = "26"
wasmtime-wasi = "26"
bytes = "1.5"
memmap2 = "0.9"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
crossbeam-deque = "0.8"

[dev-dependencies]
tempfile = "3.12"
